# echoroo

./: .bumpversion.cfg  .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONFIGURATION.md  CONTRIBUTING.md  DOCKER.md  Dockerfile  MODEL_LICENSES.md  QUICK_START.md  README.md  THIRD_PARTY_LICENSES.md  VISION.ja.md  VISION.md  clear_species_cache.py  compose.dev.yaml  echoroo.db  echoroo.sh  echoroo.spec  package-lock.json  plan.md  toritore-integration-plan.md
apps/api/: .dockerignore  .gitignore  Dockerfile.dev  README.md  alembic.ini  celerybeat-schedule  mutmut.toml  pyproject.toml  pyrightconfig.json
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_baseline_permissions_redesign.py  0001_initial_schema.py  0002_refresh_token_storage.py  0003_password_reset_tokens.py  0004_user_login_notifications_seen.py  0005_phase11_actor_check_repair.py  0006_schema_reconcile_static.py  0006a_enum_widening.py  0006b_system_settings_not_null.py  0007_nullable_checksums.py  0007_same_name_reconcile.py  0008_datasets_extension.py  0008_embedding_vector_1536_hnsw.py  0009_add_datetime_timezone_to_datasets.py  0009_recordings_legacy_rename.py  0010_align_drifts.py  0011_recording_annotations_placeholder.py  0011_search_sessions.py  0012_superuser_last_protection_update.py  0013_add_custom_svm_detection_source.py  0013_superuser_last_protection_advisory_lock.py  0014_add_annotation_votes_and_project_review_settings.py  0014_two_factor_reset_requests.py  0015_add_signal_quality_to_annotation_votes.py  0015_two_factor_reset_dispatching_reclaim.py  0016_add_sampling_tables.py  0016_pii_hash_dual_write.py  0017_add_audit_set_tables.py  0017_project_audit_log_drop_project_fk_for_hard_delete.py  0018_search_model_link_and_query_embeddings.py  0018_sites_h3_member_resolution_5_15.py  0019_add_score_distribution_to_sampling_rounds.py  0019_email_verification_trusted_devices.py  0020_add_target_taxa_to_projects.py  0021_zero_email_additive.py  0022_drop_audit_set.py  0022_email_subsystem_removal.py  0023_license_master_unification.py  0023_seed_default_recorders.py  0024_add_taxon_vernacular_locale_taxon_index.py  (+13 more)
apps/api/echoroo/: __init__.py  _alembic_phase13_supporting_ddl.py  main.py
apps/api/echoroo/core/: actions.py  audit.py  auth.py  auth_paths.py  boot_checks.py  database.py  endpoint_allowlist.py  exceptions.py  health.py  jwt.py  kms.py  kms_ops.py  operator_pii_detector.py  pagination.py  permissions.py  redirect_validator.py  redis.py  response_filter.py  s3.py  security.py  settings.py  stream_guard.py  text.py  toritore_gate.py  url_allowlist.py
apps/api/echoroo/middleware/: LOGGING_USAGE.md  __init__.py  api_key_ip_enforcement.py  audit_logging.py  auth.py  auth_router.py  cors.py  csrf.py  email_verification_enforcement.py  forced_password_change.py  logging.py  no_store_setup.py  rate_limit.py  rate_limit_buckets.py  redaction.py  security.py  security_headers.py  step_up.py  two_factor_enforcement.py
apps/api/echoroo/ml/: __init__.py  active_learning.py  base.py  birdnet_wrapper.py  classifiers.py  device_env.py  evaluation.py  registry.py  sampling.py
apps/api/echoroo/models/: __init__.py  annotation.py  annotation_comment.py  annotation_project.py  annotation_set.py  annotation_task.py  annotation_vote.py  api_key.py  base.py  clip.py  clip_annotation.py  confirmed_region.py  custom_model.py  dataset.py  detection.py  detection_run.py  email_verification_token.py  embedding.py  enums.py  evaluation.py  iucn_sync_attempt.py  license.py  note.py  password_reset_token.py  project.py  project_taxon_override.py  project_trusted_user.py  recorder.py  recording.py  recording_annotation.py  sampling_round.py  search_query_embedding.py  search_session.py  site.py  sound_event_annotation.py  superuser.py  superuser_approval_request.py  system.py  tag.py  taxon.py  (+9 more)
apps/api/echoroo/observability/: __init__.py  sentry.py
apps/api/echoroo/repositories/: __init__.py  annotation.py  annotation_comment.py  annotation_project.py  annotation_set.py  annotation_task.py  annotation_vote.py  base.py  clip.py  clip_annotation.py  confirmed_region.py  custom_model.py  dataset.py  detection_run.py  email_verification_token.py  embedding.py  evaluation.py  license.py  note.py  project.py  recorder.py  recording.py  (+11 more)
apps/api/scripts/: run_mutmut.py
apps/api/tests/: __init__.py  _alembic_upgrade.py  _kms_moto.py  conftest.py
back/: .dockerignore  CHANGES_SUMMARY.md  CONTRIBUTING.md  Dockerfile  Dockerfile.base  Dockerfile.dev  PERCH_BEFORE_AFTER.md  PERCH_BIRDNET_COMPARISON.md  PERCH_PHASE2_IMPLEMENTATION.md  PERCH_REFACTORING_CHECKLIST.md  PERCH_REFACTORING_SUMMARY.md  README.md  alembic.ini  echoroo.db  mkdocs-guide.yml  pyproject.toml
back/bruno/echoroo/: bruno.json
back/docs/: ADDING_NEW_MODELS.md  ML_ARCHITECTURE_OVERVIEW.md  ML_MODELS.md  ML_MODEL_INSTALLATION.md  ML_WORKER_UPDATE.md  PERCH_TO_BIRDNET_MIGRATION.md  PERCH_V2_MIGRATION.md  PHASE_6_3_SUMMARY.md
back/docs/developer_guide/: api.md  dataset_metadata_plan.md  dataset_metadata_ui.md  ml_inference_system.md  quickstart.md
back/docs/user_guide/: installation.md
back/migrations_backup/versions/: 09290a9be9ed_add_bit_depth_to_recording.py
back/src/echoroo/: __init__.py  exceptions.py
back/tests/: __init__.py  conftest.py
back/tests/test_api/: test_annotation_projects.py  test_audio.py  test_clip_annotations.py  test_evaluations.py  test_features.py  test_notes.py  test_recordings.py  test_sound_events.py  test_tags.py
back/tests/test_core/: test_files.py
back/tests/test_filters/: test_tag_filters.py
back/tests/test_ml/: README.md  conftest.py  test_birdnet_integration.py  test_filtering_integration.py  test_installer_integration.py
back/tests/test_routers/: test_annotation_projects.py  test_notes.py  test_plugins.py  test_setup.py  test_sound_event_annotations.py  test_tags.py  test_users.py
back/tests/test_schemas/: test_visibility_validation.py
back/tests/test_system/: test_app.py  test_logging.py  test_users.py  test_users_extended.py
(+2146 files in other folders)
