[project]
name = "echoroo-api"
version = "2.0.0"
description = "Echoroo API - Bird sound recognition and analysis platform"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "pydantic[email]>=2.10.0",
    "pydantic-settings>=2.6.0",
    "pyjwt>=2.10.0",
    "passlib[argon2]>=1.7.4",
    "argon2-cffi>=23.1",
    "python-multipart>=0.0.17",
    "fastapi-limiter>=0.1.6",
    "redis>=5.2.0",
    "httpx>=0.28.0",
    "resend>=2.5.0",
    "alembic>=1.14.0",
    "asyncpg>=0.30.0",
    "psycopg2-binary>=2.9.10",
    "h3>=4.0.0",
    "soundfile>=0.12.0",
    "mutagen>=1.47.0",
    "numpy>=1.26.0",
    "scipy>=1.11.0",
    "matplotlib>=3.8.0",
    "torch>=2.3.0",
    "torchaudio>=2.3.0",
    "Pillow>=10.0.0",
    "boto3>=1.35.0",
    "celery[redis]>=5.4.0",
    "birdnet>=0.2.0",
    "tensorflow[and-cuda]==2.20.0",
    "pgvector>=0.3.0",
    "scikit-learn>=1.5.0",
    "joblib>=1.4.0",
    # 006 permissions redesign: 2FA / WebAuthn / KMS envelope encryption
    "pyotp>=2.9.0,<3.0",
    # webauthn: scheduled for use in T146 WebAuthnService
    "webauthn>=2.5.0,<3.0",
    # Phase 17 A-9 (2026-05-04): widened to <47.0 so the security fix
    # 46.0.7 (CVE-2026-26007 / CVE-2026-34073 / CVE-2026-39892) is
    # reachable. The next major (47.x) is still excluded so an
    # accidental breaking-change pickup remains gated.
    "cryptography>=44.0,<47.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "types-passlib>=1.7.7",
    "pyyaml>=6.0",
    "types-pyyaml>=6.0",
    # 006 permissions redesign: mutation testing + integration test containers
    "mutmut>=3.2,<4.0",
    "testcontainers[postgres,redis]>=4.9,<5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["echoroo"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "W191",   # indentation contains tabs
]

[tool.ruff.lint.isort]
known-first-party = ["echoroo"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports in __init__.py
"tests/**/*.py" = ["ARG001", "ARG002"]  # unused arguments are common in pytest fixtures for dependency injection
"echoroo/api/**/*.py" = ["ARG001"]  # FastAPI router functions use unused args for Depends injection (auth, path params)

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy", "sqlalchemy.ext.mypy.plugin"]
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true

[[tool.mypy.overrides]]
module = [
    "fastapi_limiter.*",
    "resend.*",
    "soundfile.*",
    "mutagen.*",
    "scipy.*",
    "matplotlib.*",
    "h3",
    "h3.*",
    "torch",
    "torch.*",
    "torchaudio",
    "torchaudio.*",
    "PIL",
    "PIL.*",
    "boto3",
    "boto3.*",
    "botocore",
    "botocore.*",
    "celery",
    "celery.*",
    "birdnet",
    "birdnet.*",
    "pgvector",
    "pgvector.*",
    "sklearn",
    "sklearn.*",
    "joblib",
    "joblib.*",
    "librosa",
    "librosa.*",
]
ignore_missing_imports = true

# TODO Phase 4 T150a: drop this override once tests are migrated off legacy User attrs
[[tool.mypy.overrides]]
module = ["tests.*"]
ignore_errors = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --strict-markers --cov=echoroo --cov-report=term-missing"
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks integration tests (deselect with '-m \"not integration\"')",
    "requires_postgres: marks tests that require a real PostgreSQL container (testcontainers)",
    # Phase 16 Batch 6g-2 R2 (Codex Minor 3): the ``performance`` marker is
    # **opt-in only** — CI deselects these tests via ``pytest -m "not
    # performance"`` (see ``.github/workflows/ci.yml`` ``backend-tests`` job)
    # because latency assertions are environment-sensitive and would flap on
    # GitHub-hosted runners. Latency assertions also gate on
    # ``RUN_PERF_LATENCY=true`` for an additional opt-in. Run locally with
    # ``pytest -m performance`` to exercise them.
    "performance: marks tests that measure latency / p95 budgets (CI default: skipped via '-m \"not performance\"', opt-in locally with '-m performance')",
    # Phase 16 Batch 6h-3 (T998): the ``requires_runbook`` marker gates tests
    # that actually invoke the bootstrap scripts against a live database / S3
    # / KMS / IUCN API. CI runs the smoke subset (``-m "not requires_runbook"``)
    # which only validates ``--help`` exit codes and CLI argument regressions
    # without touching infrastructure. Operators can opt-in locally via
    # ``pytest -m requires_runbook`` against the Docker Compose dev stack
    # documented in quickstart §3.
    "requires_runbook: marks runbook tests that require a live infra stack (CI default: skipped via '-m \"not requires_runbook\"', opt-in locally with '-m requires_runbook')",
    # Phase 17 follow-up: the ``security`` marker tags every test physically
    # located under ``tests/security/**``. The CI ``security-tests`` job runs
    # this set as a separate pipeline (``pytest -m "security and not
    # performance"``) so the security suite gates on its own job. Auto-tagging
    # is performed by ``tests/security/conftest.py`` — individual files do not
    # need to declare ``pytestmark = pytest.mark.security`` (and indeed several
    # existing files already chain ``pytest.mark.asyncio`` / xfail markers
    # that would conflict with a manual override). Hard-gate promotion is
    # tracked separately and intentionally not enabled by this PR.
    "security: marks security-suite tests under tests/security/** (auto-tagged by tests/security/conftest.py; CI runs this set as a separate hard-gate-target job)",
]

[tool.coverage.run]
# T996 (Phase 16 Batch 6h-2): branch coverage enabled for accurate permission
# module measurement (PR-005, SC-013).
source = ["echoroo"]
branch = true
omit = [
    "*/tests/*",
    "*/__init__.py",
    "*/migrations/*",
    "echoroo/__main__.py",
    "echoroo/scripts/*",
]

[tool.coverage.report]
# T996: show_missing enabled so CI logs highlight uncovered lines.
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.mutmut]
# T995 (Phase 16 Batch 6h-1): 11-module mutation testing gate (PR-004, SC-012).
#
# Required modules:
#   core/permissions.py, core/actions.py,
#   services/superuser_service.py, services/api_key_verification.py
#
# Additional modules (Phase 16 Codex extension):
#   middleware/auth.py, middleware/auth_router.py,
#   services/webauthn_service.py, workers/dormancy_check.py
#
# Existing (maintained from Phase 2):
#   core/response_filter.py, core/audit.py, core/kms.py
#
# Target score: >= 80% (spec PR-004, SC-012). Enforced by CI hard gate.
# See also: apps/api/mutmut.toml (documentation reference, not read by mutmut 3.x).
paths_to_mutate = [
    "echoroo/core/permissions.py",
    "echoroo/core/actions.py",
    "echoroo/core/response_filter.py",
    "echoroo/core/audit.py",
    "echoroo/core/kms.py",
    "echoroo/services/superuser_service.py",
    "echoroo/services/api_key_verification.py",
    "echoroo/middleware/auth.py",
    "echoroo/middleware/auth_router.py",
    "echoroo/services/webauthn_service.py",
    "echoroo/workers/dormancy_check.py",
]
tests_dir = ["tests/unit/", "tests/security/"]
# Runner: use python -m pytest for portability across uv and CI venvs.
# --no-cov avoids coverage overhead per mutant.
# --override-ini=addopts= clears project-level addopts.
pytest_add_cli_args = [
    "-x",
    "--no-cov",
    "--override-ini=addopts=",
    # Phase 17 §D-0: prevent pytest-asyncio 1.3.0 from corrupting the global
    # EventLoopPolicy on its second in-process invocation. Without this flag,
    # mutmut's PytestRunner.run_stats() (second pytest.main() call after the
    # CI diagnostic preflight) exits 4 (USAGE_ERROR) and mutmut raises
    # BadTestExecutionCommandsException. strict mode is safe here because
    # every async test file already declares `pytestmark = pytest.mark.asyncio`
    # — there are no async tests that rely solely on auto-mode inference.
    "--override-ini=asyncio_mode=strict",
]
# Phase 17 §D-0: surface mutmut's suppressed pytest error (exit code + stderr)
# in CI logs. Without this, mutmut silently swallows the exit code and only
# prints "Failed to run pytest with args: [...]". Remove once end-to-end
# mutation scoring is confirmed working in CI.
debug = true

[dependency-groups]
dev = [
    "fakeredis>=2.23",
    "httpx>=0.28.1",
    # Required by tests/unit/core/test_kms.py for mock AWS KMS.
    "moto>=5.0",
    "mypy>=1.19.1",
]
